--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <a href="web888.html">Web888</a>
         <a href="websdr.html">WebSDR</a>
         <a href="phantomsdr.html">PhantomSDR</a>
+        <a href="airspy.html">Airspy Network</a>
     </div>
 </body>
 </html>
