--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
     <div class="antenna">📡</div>
     <h1>Shortwave Radio Map</h1>
     <div class="radio-links">
-        <a href="kiwisdr.html">KiwiSDR</a>
+        <a href="kiwisdr.html">KiwiSDR (fetch from receiverbook.de)</a>
+        <a href="dyatlov/index.html">Dyatlov KiwiSDR</a>
         <a href="openwebrx.html">OpenWebRX</a>
         <a href="web888.html">Web888</a>
         <a href="websdr.html">WebSDR</a>
