--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         <div class="map-sections">
             <div class="section">
                 <h4>Our maps:</h4>
-                <a href="kiwisdr.html">KiwiSDR (receiverbook.de)</a>
-                <a href="dyatlov/index.html">Dyatlov KiwiSDR</a>
+                <a href="kiwisdr.html">KiwiSDR</a>
+                <a href="kiwisdr_rcb.html">KiwiSDR (receiverbook.de)</a>
                 <a href="openwebrx.html">OpenWebRX</a>
                 <a href="web888.html">Web888</a>
                 <a href="websdr.html">WebSDR</a>
@@ -154,6 +154,7 @@
 
             <div class="section">
                 <h4>Other external maps:</h4>
+                <a href="http://kiwisdr.fr/radio/sdrlist/map.html">KiwiSDR.fr</a>
                 <a href="http://rx.linkfanel.net/">Linkfanel</a>
                 <a href="https://rx.skywavelinux.com/">SkywaveLinux</a>
                 <a href="https://rx-tx.info/map-sdr-points">RX-TX.info</a>
