--- a/kiwisdr_rcb.html
+++ b/kiwisdr_rcb.html
@@ -51,7 +51,7 @@
     <script src="L.timezones.js"></script>
     <script src="leaflet-field.js"></script>
     <script src="leafbase.js"></script>
-    <script src="kiwisdr.js"></script>
+    <script src="kiwisdr_fix.js"></script>
     <script>
         function toggleMenu() {
             var menu = document.getElementById("menu");
