--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                 <h4>Other external maps:</h4>
                 <a href="http://kiwisdr.fr/radio/sdrlist/map.html">KiwiSDR.fr</a>
                 <a href="http://rx.linkfanel.net/">Linkfanel</a>
+                <a href="http://map.swl.su/">Worldwide swl.su map</a>
                 <a href="https://rx.skywavelinux.com/">SkywaveLinux</a>
                 <a href="https://rx-tx.info/map-sdr-points">RX-TX.info</a>
                 <a href="https://microtelecom.it/map/ServersMap.html">PerseusSDR map</a>
