--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                 <a href="https://rx-tx.info/map-sdr-points">RX-TX.info</a>
                 <a href="https://microtelecom.it/map/ServersMap.html">PerseusSDR map</a>
                 <a href="https://airspy.com/directory/">SpyServer (Airspy)</a>
+                <a href="https://alisdr.signabroam.ovh/map/map.html">AliSDR map</a>
             </div>
         </div>
     </main>
