Insert ad script for auto tagging
Added ad script for auto tagging functionality.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Ad Script -->
+    <script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
+    <script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'eezrzicokw',
+    });
+    </script>
+    <!-- End Ad Script -->
+    
     <meta charset="UTF-8">
     <title>Shortwave Radio Map</title>
     <meta name="description" content="List of different worldwide shortwave radio receivers accessible via web interfaces.">
@@ -171,3 +180,4 @@
     </footer>
 </body>
 </html>
+
